# beecell

./: .gitignore  README.md  gather.py  get_data.py  requirements.txt  run.py  setup.cfg  setup.py
dexma/: __init__.py  device.py  location.py  parameter.py  reading.py  sample_data.txt  supplie.py
src/beecell.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/dexma/: __init__.py  decorator.py  device.py  location.py  parameter.py  project.py  reading.py  sample_data.txt  supply.py
tests/: test_device.py  test_devices.py  test_location.py  test_parameters.py  test_readings.py  test_supplie.py  test_supply.py
