[metadata]
# replace with your username:
name = beecell
version = 0.0.1
author = BEE Group - CIMNE
author_email = beegroup@cimne.upc.edu
description = API to access data comming from DEXMA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BeeGroup-cimne/beecell
project_urls =
    Bug Tracker = https://github.com/BeeGroup-cimne/beecell/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: EUPL
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    python-dateutil
    pytz
    attrs
    certifi
    charset-normalizer
    click
    idna
    iniconfig
    packaging
    pluggy
    py
    pyparsing
    pytest
    python-dotenv
    requests
    tomli
    urllib3

[options.packages.find]
where = src